# GMSL

./: .gitignore  LICENSE  README.md  data.ipynb  environment.yaml  gen_cache.py  multitask_dataset.ipynb  plot.ipynb  preprocess_pdbbind2016.py  process_multi_task_dataset.py  requirements.txt  setup.cfg  setup.py  task_models.py  test.ipynb  test.py  test_dataset.py  test_esm.py  test_gpt4.py  test_plot.py  train.py  train1.py  try_load_data.ipynb  try_load_data.py
.ipynb_checkpoints/: notebook-checkpoint.ipynb
config/: gearnet_edge.yaml  gmsl_dymean.yaml  gmsl_egnn.yaml  gmsl_eqgat.yaml  gmsl_esm_train_all.yaml  gmsl_gat.yaml  gmsl_gcn.yaml  gmsl_gearnet.yaml  gmsl_gearnet_fold.yaml  gmsl_gearnet_go.yaml  gmsl_gearnet_train_all.yaml  gmsl_gvp.yaml  gmsl_hemenet.yaml  gmsl_hemenet_alpha_only.yaml  gmsl_hemenet_train_all.yaml  gmsl_hemenet_train_all_aug.yaml  gmsl_painn.yaml  gmsl_schnet.yaml  hemenet.yaml
docs/: Process_dataset.md
gmsl/: backup.py  datamodule.py  model.py  modules.py  register.py  test.py
notebooks/: download.ipynb  download_go.ipynb  download_homology.ipynb  download_pdb.ipynb  ec.ipynb  egnn.ipynb  go.ipynb  homology.ipynb  try_load_data.ipynb
output_info/: Homology_uniprots.json  domain_info.json  enzyme_commission_new_uniprots.json  enzyme_commission_uniprots.json  fold_annots.json  fold_uniprots.json  gene_ontology_uniprots.json  go_task_uniprots.json  ppi_info_excel.json  ppi_info_pdb.json  protein_info_excel.json  protein_info_pdb.json  protein_ligand_uniprots.json  protein_protein_uniprots.json  reaction_uniprots.json  (+9 more)
scripts/: test.py  (+3 more)
(+72 files in other folders)
